<resources>
    <string name="app_name">Buscador de tiendas</string>
    <string name="register_here">¿No tienes una cuenta?  <b>Registrate aquí</b></string>
    <string name="login_here">Ya tienes una cuenta, <b> Inicia sesión aquí </b></string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
    <string name="ingrese_la_contrase_a">Ingrese la contraseña</string>
    <string name="ingrese_el_usuario">Ingrese el usuario</string>
    <string name="ver_contrase_a">Ver contraseña</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="identificate">Identificate</string>
    <string name="nuevo_registro">Registrate</string>
    <string name="registrar">REGISTRAR</string>
    <string name="ingresa_los_datos_que_se_solicitan">Ingresa los datos que se solicitan</string>
    <string name="nombre_empresa">Ingrese el nombre de la empresa</string>
    <string name="google_maps_key">AIzaSyDs4rAJI0JH83SybxBk676n5nHbl768BD4</string>
    <string name="missing_data_login">No se han ingresado los datos para iniciar sesión</string>
    <string name="user_required">Debe ingresar el usuario</string>
    <string name="password_required">Debe ingresar la contraseña</string>
    <string name="password_max">La contraseña no puede ser menor a 5 caracteres</string>
    <string name="success">Ok</string>
    <string name="empresa_required">Debe ingresar el nombre de la empresa</string>
    <string name="missing_data_register">No se han ingresado los datos para el registro</string>
    <string name="password_errors">La contraseña de verificación no coincide</string>
    <string name="user_registered">El usuario %s ya existe, por favor ingrese otro usuario</string>
    <string name="location_required">Es necesario ingresar la ubicación del local</string>
    <string name="schedule_required">El horario del local es requerido</string>
    <string name="image_required">La imágen del local es requerida</string>
    <string name="error_register">Hubo un error al registrar los datos, por favor intente nuevamente</string>
    <string name="not_found_results">No se encontraron resultados para %s, por favor intente nuevamente</string>
    <string name="gps_desactived">El GPS no se encuentra activado, por favor activelo para poder ubicar el local</string>
    <string name="delete_ask">¿Estás seguro de que quieres eliminar los datos de %s?</string>
    <string name="update_ask">¿Estás seguro de que quieres actualizar los datos de %s?</string>
    <string name="internet_error">No se ha detectado una conexión a internet, por favor revisela e intente nuevamente</string>
    <string name="not_seen_pass">Ocultar la contraseña</string>
    <string name="ocultar">Mostrar la contraseña</string>
    <string name="user_errors">Usuario o contraseña incorrectos, por favor verifique e intente nuevamente</string>
    <string name="register_success">Registro Correcto</string>
    <string name="seleccionar_de_galer_a">Seleccionar de galería</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="details_store">Detalles de la tienda</string>
    <string name="ingresar_datos">Ingrese los datos</string>
    <string name="name">Nombre</string>
    <string name="wait">Esperando...</string>
    <string name="nit">Ingrese el NIT</string>
    <string name="descripcion">Descripción de la tienda</string>
    <string name="location">Ubicación de la tienda</string>
    <string name="save">GUARDAR DATOS</string>
    <string name="name_store">Nombre de la tienda</string>
    <string name="horario">Horario de trabajo</string>
    <string name="welcome">Bienvenido: %s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="direccion">Dirección</string>
    <string name="msjgps">Es necesario habilitar la localización de su dispositivo ya que se obtendrán las coordenadas para ubicar la tienda, ¿Desea activar la ubicación GPS?</string>
    <string name="gps_off">Gps desactivado</string>
    <string name="missing_permission">No se han aceptado todos los permisos, los permisos solicitados son necesarios para que la app funcione correctamente</string>
    <string name="permission_ok">Todos los permisos han sido aceptados</string>
    <string name="missing_per">Faltan permisos por conceder</string>
    <string name="atention">Atención</string>
    <string name="missin_coordinates">Aun no se han obtenido las coordenadas</string>
    <string name="recover_location">Recuperando la última dirección guardada</string>
    <string name="from">Desde</string>
    <string name="to">Hasta</string>
    <string name="error_update_schedule">Hubo un error al intentar actualizar el horario de trabajo de %s</string>
    <string name="error_delete">Hubo un error al intentar eliminar los datos, por favor intente nuevamente</string>
    <string name="backs">Regresar</string>
    <string name="infos">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using.</string>
    <string name="Nit">NIT del local:</string>
    <string name="nit_example">012655ASADSFSF2655</string>
    <string name="enter_name">Ingrese el nombre, descripción o nit del local</string>
    <string name="not_results">Sin Resultados</string>
    <string name="notfound">Aun no se han cargado los datos de ninguna tienda, presione el botón de abajo para agregar una</string>
    <string name="add">Agregar</string>
    <string name="voice_store">Diga el nombre de la tienda</string>
    <string name="description_max">La descripción de la tienda no puede ser menor a 30 caracteres</string>
    <string name="nit_required">NIT de la tienda requerido</string>
    <string name="store_repited">Hubo un error al registrar la tienda %s, por que ya existe una con el mismo nombre</string>
    <string name="nit_repited">Hubo un error al registrar la tienda %s, por que ya existe una con el mismo NIT</string>
    <string name="foto_required">Debe agregar la foto de la tienda</string>
    <string name="limit_text">No se puede agregar más de 150 caracteres</string>
    <string name="cantidad">%s de %s caracteres</string>
    <string name="init_text">0 de 150 caracteres</string>
    <string name="delete">Eliminar</string>
    <string name="error_delete_store">Hubo un error al intentar borrar los datos de %s por favor intente nuevamente</string>
    <string name="Nit_store">NIT de la tienda:</string>
    <string name="update">Actualizar</string>
    <string name="horario_required">Debe agregar el horario de trabajo de %s</string>
</resources>