<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    app:behavior_hideable="false"
    android:layout_margin="5dp"
    app:behavior_peekHeight="235dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:elevation="1dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imagen"
                    android:background="@drawable/tienda"
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_height="180dp"/>

                <ImageView
                    android:background="#AB191919"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:background="@drawable/back_cards"
                    android:gravity="end"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/Nombre"
                        android:textColor="@color/text_redesign"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:text="Samborns"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <me.grantland.widget.AutofitLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|bottom">
                <TextView
                    android:id="@+id/descripcion"
                    android:text="@string/infos"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                </me.grantland.widget.AutofitLayout>
            </FrameLayout>
            <LinearLayout
                android:id="@+id/infos"
                android:layout_below="@id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/content"
                    android:layout_gravity="bottom"
                    android:text="@string/Nit_store"
                    android:textColor="@color/text_redesign" />

                <TextView
                    android:id="@+id/Nit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:text="@string/nit_example"
                    android:textColor="@color/text_redesign" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/direccion"
                        android:textColor="@color/text_redesign"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/origens"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/ovalo_btn"
                            android:orientation="vertical" />

                        <TextView
                            android:id="@+id/origen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="Esperando..."
                            android:textColor="@color/text_redesign"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:text="@string/horario"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:textColor="@color/text_redesign"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/horarios"
                    tools:listitem="@layout/schedule_design"
                    app:spanCount="3"
                    tools:itemCount="3"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                android:layout_below="@id/infos"
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_redesign"
                android:text="@string/backs"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>



    </androidx.cardview.widget.CardView>
</LinearLayout>