<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <FrameLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/primaryColor"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:title="" />

            <com.ferfalk.simplesearchview.SimpleSearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_name"
                app:type="bar"
                android:textColor="@color/primary_text"
                app:searchBackground="@color/searchs"
                app:backIconTint="@color/primary_text"
                app:hintColor="@color/text_redesign"
                app:iconsTint="@color/primary_text"
                app:voiceSearch="true" />

        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        app:layout_anchorGravity="bottom"
        app:layout_anchor="@id/main.appbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_margin="10dp" />

        <RelativeLayout
            android:id="@+id/mensajeC"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/avisos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <com.skyfishjy.library.RippleBackground
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    app:rb_color="#FFCFCFCF"
                    app:rb_duration="3000"
                    app:rb_radius="32dp"
                    app:rb_rippleAmount="6"
                    app:rb_scale="5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="50dp"
                        android:orientation="vertical">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/cl"
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="false"
                            app:lottie_rawRes="@raw/search_empty" />

                        <TextView
                            android:id="@+id/titulo_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/not_results"
                            android:textColor="@color/text_redesign"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/subtittle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignWithParentIfMissing="false"
                            android:layout_below="@id/titulo_text"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="24dp"
                            android:layout_marginRight="24dp"
                            android:gravity="center_horizontal"
                            android:text="@string/notfound"
                            android:textSize="10sp" />

                        <Button
                            android:id="@+id/agregar"
                            android:background="@drawable/btn_map"
                            android:layout_width="match_parent"
                            android:text="@string/add"
                            android:textColor="@color/white"
                            android:layout_below="@+id/subtittle"
                            android:layout_margin="16dp"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </com.skyfishjy.library.RippleBackground>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_add_24px"
        app:backgroundTint="@color/principal_light"
        app:fabCustomSize="60dp"
        app:layout_anchorGravity="bottom|end" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>